dist/1.0/bin/sample/retrieveUnpackaged/objects/Dimension_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <description>Value, that will be used in communication between systems</description>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Product ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dimension Dictionary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dimension Dictionary Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Product2_00NT00000017znPMAQ</fullName>
        <active>true</active>
        <field>Product2.Dimension_Dictionary__c</field>
        <filterItems>
            <field>Dimension_Dictionary__c.Type__c</field>
            <operation>equals</operation>
            <value>POP ID</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product_Dimension Dictionary</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000D76YMAS_00NT00000017zdEMAQ</fullName>
        <active>true</active>
        <field>Component__c.Dimension_Dictionary__c</field>
        <filterItems>
            <field>Dimension_Dictionary__c.Type__c</field>
            <operation>equals</operation>
            <value>POP ID</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Component_Dimension Dictionary</name>
    </namedFilters>
    <pluralLabel>Dimension Dictionaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>